...
              decoration: BoxDecoration(
                color: Color(0xFF4C748B),
                borderRadius: BorderRadius.all(Radius.circular(10.0)),
                border: Border.all(width: 2.0, color: Color(0xFF4C748B)),
              ),
              child: TextButton(
                key: Key('start-btn'),
                child: Text("Start",
                    style: TextStyle(
                        fontFamily: "Kollektif",
                        fontSize: 14,
                        color: Colors.white,
                        letterSpacing: 1.5,
...
